fixed icons not showing

--- a/product_app/static/css/styles.css
+++ b/product_app/static/css/styles.css
@@ -184,8 +184,8 @@ h1 {
   .nav-links li a i {
     text-indent: 0;
     position: absolute;
-    left: 0; top: 0;          /* re‑show the icon */
-    font-size: 3.2rem;
+    left: 0; top: 0;
+    font-size: 1.6rem; /* <-- FIX: This size is much more appropriate */
     width: 100%; height:100%;
     display: flex;
     align-items: center;
